# chessboard

./: .gitignore  Makefile  README.md  docker-compose.yml
chessboard/: .dockerignore  Dockerfile  Makefile  conftest.py  manage.py  pyproject.toml
chessboard/config/: settings.py  urls.py
chessboard/core/: admin.py  conftest.py  facade.py  models.py  serializers.py  tests.py  urls.py  views.py
chessboard/core/migrations/: 0001_initial.py  0002_alter_piece_color_alter_piece_type.py  0003_alter_piece_options_alter_piece_type.py
contrib/: env-sample
