[tool.poetry]
name = "chessboard"
version = "0.1.0"
description = ""
authors = ["Gustavo Sousa <ola@gustavosousa.me>"]

[tool.poetry.dependencies]
python = "^3.10"
Django = "^4.0.3"
python-decouple = "^3.6"
djangorestframework = "^3.13.1"
drf-spectacular = "^0.21.2"
drf-api-logger = "^1.0.10"

[tool.poetry.dev-dependencies]
blue = "^0.8.0"
isort = "^5.10.1"
prospector = "^1.7.6"
pytest = "^7.0.1"
pytest-cov = "^3.0.0"
pytest-django = "^4.5.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.pytest.ini_options]
minversion = "6.0"
addopts = "-ra -q"
python_files = ['tests.py', 'test_*.py', '*_tests.py']
python_classes = ["Test", "Acceptance"]
python_functions = ["test"]
testpaths = ["tests"]
DJANGO_SETTINGS_MODULE = "config.settings"

[tool.coverage.report]
show_missing = true
